# card-games

./: .gitignore  Cargo.toml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs  types.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs
frontend/src/components/: game.rs  home.rs  join_room.rs  room.rs
frontend/src/components/game/: host_panel.module.css  host_panel.rs  other_player.rs  player.rs  tycoon.rs
frontend/src/components/game/tycoon/: player.rs
frontend/src/components/games/: game.rs
frontend/src/components/games/tycoon/: player.rs  tycoon.rs
frontend/src/ui/: button.module.css  button.rs  input.module.css  input.rs  panel.module.css  panel.rs
frontend/static/: index.scss
shared/: Cargo.toml
shared/shared/: Cargo.toml
shared/shared-core/: Cargo.toml
shared/shared-core/src/: lib.rs  logic.rs  traits.rs  types.rs
shared/shared-macros/: Cargo.toml
shared/shared-macros/src/: lib.rs
shared/shared/src/: lib.rs
shared/shared/src/games/: carbo.rs  games.rs  tycoon.rs
shared/src/: events.rs  games.rs  helpers.rs  lib.rs  logic.rs  traits.rs  types.rs
shared/src/games/: carbo.rs  coup.rs  games.rs  tycoon.rs
