[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
axum = { version = "0.8.1", features = ["ws", "macros"] }
futures = "0.3.31"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.11", features = ["v4"] }
serde = { version = "1.0.2", features = ["derive"] }