[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-core = { path = "../shared-core" }
shared-macros = { path = "../shared-macros" }
serde = { version = "1.0.2", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.11", features = ["v4"] }